Converted to latest log4j