@@ -46,10 +46,11 @@
 		<plugin>
 		    <groupId>org.apache.maven.plugins</groupId>
 		    <artifactId>maven-surefire-plugin</artifactId>
-		    <version>2.14</version>
-		    <configuration>
-                <argLine>-XX:-UseSplitVerifier -Djava.awt.headless=true</argLine>
-		    </configuration>
+		    <!-- <configuration>
+				<forkCount>3</forkCount>
+				<reuseForks>true</reuseForks>
+				<argLine>-XX:-UseSplitVerifier -Djava.awt.headless=true -Xmx1024m -XX:MaxPermSize=256m</argLine>
+		    </configuration> -->
 		</plugin>
   		<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
@@ -133,9 +134,9 @@
   		<version>2.3.19</version>
   	</dependency>
   	<dependency>
-  		<groupId>log4j</groupId>
-  		<artifactId>log4j</artifactId>
-  		<version>1.2.17</version>
+  		<groupId>org.apache.logging.log4j</groupId>
+  		<artifactId>log4j-core</artifactId>
+  		<version>2.17.2</version>
   	</dependency>
   	<dependency>
   		<groupId>jgraph</groupId>
